<resources>
    <string name="app_name">StayFit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--BottomNavigationView Strings-->
    <string name="nav_diary">Diary</string>
    <string name="nav_workout">Workout</string>
    <string name="nav_user">User Profile</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_nutrition">Nutrition</string>
    <string name="nav_run_tracker_label">Running Tracker</string>
    <string name="nav_meals">Meals</string>


    <!--Supplement Fragment-->
    <string name="primary_supplement">Title goes here</string>
    <string name="primary_short">Title here</string>
    <string name="subtext">Subtitle here</string>
    <string name="supplement_description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="menu_activity">Activity</string>
    <string name="menu_workout">Workouts</string>
    <string name="menu_nutrition">Nutrition</string>
    <string name="profile_screen_image">profile_screen_image</string>
    <string name="profile_screen_title">Profile</string>
    <string name="home">Home</string>

    <!--Profile Screen Fragment-->
    <string name="profile_page_image">userImage</string>
    <string name="profile_main_text">Profile</string>
    <string name="profile_page_name">developer@appsnipp.com</string>
    <string name="btn_profile_edit">EDIT PROFILE</string>

    <!--Profile Details Screen Fragment-->
    <string name="txt_first_name">First Name</string>
    <string name="txt_last_name">Last Name</string>
    <string name="txt_email">Email</string>
    <string name="txt_profile_location">Location</string>
    <string name="txt_profile_birthday">Birthdate</string>
    <string name="txt_profile_height">Height</string>
    <string name="txt_profile_weight">Weight</string>


    <!--Running Screen Fragment-->
    <string-array name="filter_options">
        <item>Date</item>
        <item>Running Time</item>
        <item>Distance</item>
        <item>Average Speed</item>
        <item>Calories Burned</item>
    </string-array>

    <string name="btn_run_apply_changes">Apply Changes</string>
    <string name="txt_run_weight">Your Weight</string>
    <string name="txt_run_name">Your Name</string>
    <string name="btn_run_continue">Continue</string>
    <string name="et_run_current_weight">Current Weight</string>
    <string name="txt_run_total_distance">Total Distance</string>
    <string name="google_maps_key">AIzaSyDsjT0bSjFcZg9EFgroRJIlJCYOyA8_2y4</string>
    <string name="txt_run_total_time">Total Time</string>
    <string name="txt_run_distance">0km</string>
    <string name="txt_run_time">00:00:00</string>
    <string name="txt_run_total_calories_burned">Total Calories Burned</string>
    <string name="txt_run_calories_burned">0kcal</string>
    <string name="txt_run_average_speed">Average Speed</string>
    <string name="txt_run_speed">0km/h</string>
    <string name="et_run_name">Name</string>
    <string name="tv_run_tracking_timer">00:00:00:00</string>
    <string name="btn_run_tracking_start">Start</string>
    <string name="btn_run_tracking_finish_run">Finish Run</string>
    <string name="tv_run_tracking_go">Let\'s go, USERNAME!</string>
    <string name="tv_run_item_date">DATE</string>
    <string name="tv_run_item_time">TIME</string>
    <string name="tv_run_item_distance">DISTANCE</string>
    <string name="tv_run_item_avgspeed">AVGSPEED</string>
    <string name="tv_run_item_calories">CALORIES</string>
    <string name="nav_running_tracker">Running Tracker</string>


    <!--Login -SignUp Screens-->
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="button_sign_in">Sign in</string>
    <string name="button_sign_up">Sign up</string>
    <string name="hint_email">Email</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="txt_login_screen">It\'s good to see you again.</string>


    <string name="button_send">Send</string>
    <string name="text_forgot_password">Forgot password?</string>
    <string name="text_signIn_message">Hello, sign in to your account</string>
    <string name="text_signIn_social_media">Or Sign in using social media</string>
    <string name="text_signUp_social_media">Or Sign up using social media</string>
    <string name="text_signIn_signUp">Don\'t have an account? <b>Sign up</b></string>
    <string name="text_signUp_terms">By signing up, you agree to our <b>terms and conditions</b></string>
    <string name="tv_signUpMsg">Hello, let\'s set up your account</string>

    <string name="text_forgot_password_title">Forgot password? No worries</string>
    <string name="text_forgot_password_message">We will send you a link to reset your password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>




    <!--food tab strings-->
    <string name="tab_all">ALL</string>
    <string name="tab_recipes">RECIPES</string>
    <string name="tab_my_foods">MY FOODS</string>
    <string name="tab_meals">MEALS</string>

    <string-array name="tab_items">
    <item>@string/tab_all</item>
    <item>@string/tab_recipes</item>
    <item>@string/tab_my_foods</item>
    <item>@string/tab_meals</item>
    </string-array>

    <string name="item_position">Item %1$d</string>
    <string name="search_hint">Search for a food</string>
    <string name="search">Search for a food</string>
    <string name="speak">Speak mortal</string>
    <string name="txt_foods_history">History</string>


</resources>
