<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_workout"
            android:icon="@drawable/ic_workout"
            android:textColor="@android:color/darker_gray"
            android:title="@string/menu_workout" />
        <item
            android:id="@+id/nav_nutrition"
            android:icon="@drawable/ic_nutrition"
            android:textColor="@android:color/darker_gray"
            android:title="@string/menu_nutrition" />
        <item
            android:id="@+id/nav_activity"
            android:icon="@drawable/ic_activity"
            android:textColor="@android:color/darker_gray"
            android:title="@string/menu_activity" />
        <item
            android:id="@+id/nav_supplements"
            android:icon="@drawable/ic_supplement"
            android:title="@string/nav_supplements" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:textColor="@android:color/darker_gray"
            android:title="@string/nav_settings" />
    </group>
</menu>
